fix(add-user): add the ability to add a user on mobile

--- a/src/app/study/components/study-nav/study-nav.component.css
+++ b/src/app/study/components/study-nav/study-nav.component.css
@@ -505,6 +505,16 @@
         margin-right: 50px;
     }
 
+    .add-user-widget {
+        float: right;
+        margin-right: 0;
+        margin-top: -2px;
+    }
+
+    .copy-url {
+        margin-bottom: 30px;
+    }
+
     #notifications {
         width: 200px;
     }
